# dcos-metrics

./: .gitignore  CONTRIBUTING.md  DEMO.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  Vagrantfile  architecture.dia  build_module.sh  config.go  config_test.go  dcos-metrics-collector.go  dcos-metrics-collector_test.go  dcos-metrics.go  dcos-metrics_test.go  fake_info_test.go  get-mesos.sh  http_helpers.go  run_module.sh  run_task.sh
collector/: .gitignore  README.md  agent.go  agentPoller.go  agentPoller_test.go  agent_poller.go  agent_test.go  avroTCPReader.go  avro_record.go  avro_record_test.go  avro_tcp_reader.go  client.go  client_test.go  collector.go  collector_test.go  config.go  envFlags.go  env_flags.go  env_util.go  framework_collector.go  framework_collector_test.go  generate.go  hostHelpers.go  host_helpers.go  httpUtil.go  http_client.go  http_client_test.go  http_profile.go  http_util.go  kafka_framework.go  kafka_producer.go  main.go  main_test.go  mesos.go  mesos_agent.go  mesos_agent_test.go  mesos_test.go  node.go  node_collector.go  node_collector_test.go  (+6 more)
collectors/: interface.go
consumer/: .gitignore  README.md  build.gradle  consumer.go  settings.gradle  start-consumer.sh
consumers/: build.gradle
docs/: ARCHITECTURE.md  COLLECTOR.md  COLLECTORS.md  CONSUMERS.md  DEVELOPMENT.md  HTTP_API.yml  MESOS_MODULE.md  PRODUCERS.md  SCHEMA.md  original-architecture-document.md
events/: events.go  statsd.go  statsd_test.go
example-consumers/: settings.gradle
http_helpers/: http_helpers.go
mesos_module/: CMakeLists.txt  InstallAvro.cmake  avro_encoder.cpp  avro_encoder.hpp  collector_output_writer.cpp  container_assigner.cpp  container_assigner_strategy.cpp  container_state_cache_impl.cpp  generate_metrics_schema_json.py  io_runner_impl.cpp  io_runner_impl.hpp  isolator_module.cpp  isolator_module.hpp  memnmem.cpp  memnmem.h  mesos_hash.hpp  metrics_tcp_sender.cpp  metrics_tcp_sender.hpp  module_access_factory.cpp  module_access_factory.hpp  params.cpp  params.hpp  range_pool.hpp  socket_util.hpp  statsd_tagger.hpp  sync_util.hpp  udp_endpoint.hpp
module/: CMakeLists.txt  InstallMesosPicojsonIncludes.cmake  InstallMesosProtobufIncludes.cmake  README.md  avro_encoder.cpp  avro_encoder.hpp  collector_output_writer.cpp  collector_output_writer.hpp  container_assigner.cpp  container_assigner.hpp  container_assigner_strategy.cpp  container_assigner_strategy.hpp  container_reader.hpp  container_reader_impl.cpp  container_reader_impl.hpp  container_state_cache.hpp  container_state_cache_impl.cpp  container_state_cache_impl.hpp  generate_metrics_schema_json.sh  install.sh  io_runner.hpp  io_runner_impl.cpp  io_runner_impl.hpp  isolator_module.cpp  isolator_module.hpp  metrics_tcp_sender.cpp  metrics_udp_sender.cpp  metrics_udp_sender.hpp  module_access_factory.cpp  module_access_factory.hpp  modules.json.in  output_writer.hpp  params.hpp  resource_estimator_module.cpp  resource_estimator_module.hpp  socket_sender.cpp  socket_sender.hpp  socket_util.hpp  statsd_output_writer.cpp  statsd_output_writer.hpp  (+9 more)
module/tests/: CMakeLists.txt  InstallGTestGMock.cmake  avro_encoder_tests.cpp  container_assigner_strategy_tests.cpp  container_assigner_tests.cpp  container_reader_impl_tests.cpp  io_runner_impl_tests.cpp  isolator_module_tests.cpp  mock_container_assigner.hpp  mock_container_reader.hpp  mock_container_state_cache.hpp  module_access_factory_tests.cpp  sample_translator.cpp  socket_sender_tests.cpp  standalone_module.cpp  statsd_output_writer_fuzz.cpp  statsd_output_writer_tests.cpp  statsd_tagger_tests.cpp  stub_lookup_statsd_output_writer.hpp  stub_socket_sender.hpp  stub_udp_sender.hpp  sync_util_tests.cpp  tcp_sender_tests.cpp  test_socket.hpp  test_tcp_socket.hpp  test_udp_socket.hpp  udp_sender_tests.cpp
plugins/: CONTRIBUTING.md  README.md  option.go  plugin.go  utils.go  utils_test.go
producers/: interface.go  kafkaProducer.go  kafkaProducer_test.go  uptime-producer.go
router/: README.md  counter.go  (+6 more)
slave/: CMakeLists.txt  InstallMesosPicojsonIncludes.cmake  InstallMesosProtobuf.cmake  InstallMesosProtobufIncludes.cmake  README.md  container_assigner.cpp  container_assigner.hpp  container_assigner_strategy.cpp  container_assigner_strategy.hpp  container_reader.hpp  container_reader_impl.cpp  container_reader_impl.hpp  container_state_cache.hpp  container_state_cache_impl.cpp  container_state_cache_impl.hpp  env_hook.cpp  env_hook.hpp  input_assigner.cpp  input_assigner.hpp  input_assigner_factory.cpp  input_assigner_factory.hpp  input_assigner_impl.cpp  input_assigner_impl.hpp  input_assigner_strategy.cpp  input_assigner_strategy.hpp  input_state_cache.hpp  input_state_cache_impl.cpp  input_state_cache_impl.hpp  io_runner.hpp  io_runner_impl.cpp  io_runner_impl.hpp  isolator_module.cpp  isolator_module.hpp  mesos_hash.hpp  module_access_factory.cpp  module_access_factory.hpp  modules.json.in  output_writer.hpp  params.cpp  params.hpp  (+24 more)
slave/tests/: CMakeLists.txt  container_assigner_strategy_tests.cpp  container_assigner_tests.cpp  container_reader_impl_tests.cpp  container_state_cache_impl_tests.cpp  env_hook_tests.cpp  input_assigner_factory_tests.cpp  input_assigner_strategy_tests.cpp  input_assigner_tests.cpp  input_state_cache_impl_tests.cpp  input_state_cache_tests.cpp  io_runner_impl_tests.cpp  isolator_module_tests.cpp  mock_container_assigner.hpp  mock_container_assigner_strategy.hpp  mock_container_reader.hpp  mock_container_state_cache.hpp  mock_input_assigner.hpp  mock_input_assigner_strategy.hpp  mock_input_state_cache.hpp  mock_io_runner.hpp  mock_output_writer.hpp  mock_port_reader.hpp  mock_port_runner.hpp  mock_port_writer.hpp  module_access_factory_tests.cpp  params_tests.cpp  port_reader_impl_fuzz.cpp  port_reader_impl_tests.cpp  port_reader_tests.cpp  port_runner_impl_tests.cpp  port_writer_tests.cpp  range_pool_tests.cpp  statsd_output_writer_fuzz.cpp  statsd_output_writer_tests.cpp  statsd_tagger_tests.cpp  stub_lookup_statsd_output_writer.hpp  sync_util_tests.cpp  tag_datadog_tests.cpp  tag_key_prefix_tests.cpp  (+1 more)
(+270 files in other folders)
